--- a/src/BOMA.RTR.Client/src/app/app.component.html
+++ b/src/BOMA.RTR.Client/src/app/app.component.html
@@ -2,37 +2,21 @@
   class="columns-6 border-b text-center text-4xl font-bold bg-amber-100 h-12 flex items-center">
   <div class="w-full border-r">RCP ID</div>
   <div class="w-full border-r">Godzina wejścia</div>
-  <div class="w-full border-r-4 border-r-amber-900">Godzina wyjścia</div>
-
-  <div class="w-full border-r">RCP ID</div>
-  <div class="w-full border-r">Godzina wejścia</div>
   <div class="w-full border-r">Godzina wyjścia</div>
 </div>
 
 @for (pairRecord of entryExitPairRecords$ | async; track pairRecord) {
   <div class="columns-6 border-b text-center text-4xl h-12 flex items-center">
     <div class="w-full border-r font-bold">
-      {{ pairRecord[0]?.userRcpId }}&nbsp;
+      {{ pairRecord?.userRcpId }}&nbsp;
     </div>
     <div class="w-full border-r">
-      {{ pairRecord[0]?.entryDate | date: 'dd-MM-yyyy' }}
-      {{ pairRecord[0]?.entryTime }}&nbsp;
-    </div>
-    <div class="w-full border-r-4 border-r-amber-900">
-      {{ pairRecord[0]?.exitDate | date: 'dd-MM-yyyy' }}
-      {{ pairRecord[0]?.exitTime }}&nbsp;
-    </div>
-
-    <div class="w-full border-r font-bold">
-      {{ pairRecord[1]?.userRcpId }}&nbsp;
+      {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
+      {{ pairRecord?.entryTime }}&nbsp;
     </div>
     <div class="w-full border-r">
-      {{ pairRecord[1]?.entryDate | date: 'dd-MM-yyyy' }}
-      {{ pairRecord[1]?.entryTime }}&nbsp;
-    </div>
-    <div class="w-full border-r">
-      {{ pairRecord[1]?.exitDate | date: 'dd-MM-yyyy' }}
-      {{ pairRecord[1]?.exitTime }}&nbsp;
+      {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
+      {{ pairRecord?.exitTime }}&nbsp;
     </div>
   </div>
 }
