--- a/src/BOMA.RTR.Client/src/app/app.component.html
+++ b/src/BOMA.RTR.Client/src/app/app.component.html
@@ -1,57 +1,10 @@
-<div class="flex flex-row">
-  <div class="basis-1/2">
-    <div
-      class="columns-3 border-b text-center text-2xl font-bold bg-amber-100 h-8 items-center">
-      <div class="w-full border-r">RCP ID</div>
-      <div class="w-full border-r">Godzina wejścia</div>
-      <div class="w-full border-r-2 border-r-gray-900">Godzina wyjścia</div>
-    </div>
-
-    @for (
-      pairRecord of (entryExitPairRecordsInHall$ | async)![0];
-      track pairRecord
-    ) {
-      <div class="columns-3 border-b text-center text-2xl h-8 items-center">
-        <div class="w-full border-r font-bold">
-          {{ pairRecord?.userRcpId }}&nbsp;
-        </div>
-        <div class="w-full border-r">
-          {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.entryTime }}&nbsp;
-        </div>
-        <div class="w-full border-r-2 border-r-amber-900">
-          {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.exitTime }}&nbsp;
-        </div>
-      </div>
-    }
-  </div>
-
-  <div class="basis-1/2">
-    <div
-      class="columns-3 border-b text-center text-2xl font-bold bg-amber-100 h-8 items-center">
-      <div class="w-full border-r">RCP ID</div>
-      <div class="w-full border-r">Godzina wejścia</div>
-      <div class="w-full border-r">Godzina wyjścia</div>
-    </div>
-
-    @for (
-      pairRecord of (entryExitPairRecordsInHall$ | async)![1];
-      track pairRecord
-    ) {
-      <div class="columns-3 border-b text-center text-2xl h-8 items-center">
-        <div class="w-full border-r font-bold">
-          {{ pairRecord?.userRcpId }}&nbsp;
-        </div>
-        <div class="w-full border-r">
-          {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.entryTime }}&nbsp;
-        </div>
-        <div class="w-full border-r">
-          {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.exitTime }}&nbsp;
-        </div>
-      </div>
-    }
-  </div>
-</div>
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+  <mat-tab label="Produkcja"
+    ><app-table-with-records
+      [department]="DepartmentType.Produkcja"></app-table-with-records
+  ></mat-tab>
+  <mat-tab label="Magazyn"
+    ><app-table-with-records
+      [department]="DepartmentType.Magazyn"></app-table-with-records
+  ></mat-tab>
+</mat-tab-group>
