Adjust displaying proper records for production hall and warehouse related departments + adjust production deployment script

--- a/src/BOMA.RTR.Client/src/app/app.component.html
+++ b/src/BOMA.RTR.Client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-  <mat-tab label="Produkcja"
+  <mat-tab label="Hala"
     ><app-table-with-records
       [department]="DepartmentType.Produkcja"></app-table-with-records
   ></mat-tab>
