--- a/src/BOMA.RTR.Client/src/app/components/table-with-records/table-with-records.component.html
+++ b/src/BOMA.RTR.Client/src/app/components/table-with-records/table-with-records.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-row">
-  <div class="basis-1/2">
+  <div class="basis-1/3">
     <div
       class="columns-3 border-b text-center text-2xl font-bold bg-amber-100 h-8 items-center">
       <div class="w-full border-r">RCP ID</div>
@@ -14,22 +14,22 @@
         </div>
         <div class="w-full border-r">
           {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.entryTime }}&nbsp;
+          <span class="font-bold">{{ pairRecord?.entryTime }}&nbsp;</span>&nbsp;
         </div>
         <div class="w-full border-r-2 border-r-amber-900">
           {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.exitTime }}&nbsp;
+          <span class="font-bold">{{ pairRecord?.exitTime }}&nbsp;</span>
         </div>
       </div>
     }
   </div>
 
-  <div class="basis-1/2">
+  <div class="basis-1/3">
     <div
       class="columns-3 border-b text-center text-2xl font-bold bg-amber-100 h-8 items-center">
       <div class="w-full border-r">RCP ID</div>
       <div class="w-full border-r">Godzina wejścia</div>
-      <div class="w-full border-r">Godzina wyjścia</div>
+      <div class="w-full border-r-2 border-r-gray-900">Godzina wyjścia</div>
     </div>
 
     @for (pairRecord of (entryExitPairRecords$ | async)![1]; track pairRecord) {
@@ -39,11 +39,36 @@
         </div>
         <div class="w-full border-r">
           {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.entryTime }}&nbsp;
+          <span class="font-bold">{{ pairRecord?.entryTime }}&nbsp;</span>&nbsp;
+        </div>
+        <div class="w-full border-r-2 border-r-amber-900">
+          {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
+          <span class="font-bold">{{ pairRecord?.exitTime }}&nbsp;</span>
+        </div>
+      </div>
+    }
+  </div>
+
+  <div class="basis-1/3">
+    <div
+      class="columns-3 border-b text-center text-2xl font-bold bg-amber-100 h-8 items-center">
+      <div class="w-full border-r">RCP ID</div>
+      <div class="w-full border-r">Godzina wejścia</div>
+      <div class="w-full border-r">Godzina wyjścia</div>
+    </div>
+
+    @for (pairRecord of (entryExitPairRecords$ | async)![2]; track pairRecord) {
+      <div class="columns-3 border-b text-center text-2xl h-8 items-center">
+        <div class="w-full border-r font-bold">
+          {{ pairRecord?.userRcpId }}&nbsp;
+        </div>
+        <div class="w-full border-r">
+          {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
+          <span class="font-bold">{{ pairRecord?.entryTime }}&nbsp;</span>
         </div>
         <div class="w-full border-r">
           {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
-          {{ pairRecord?.exitTime }}&nbsp;
+          <span class="font-bold">{{ pairRecord?.exitTime }}&nbsp;</span>
         </div>
       </div>
     }
