Display only time without date in table

--- a/src/BOMA.RTR.Client/src/app/components/table-with-records/table-with-records.component.html
+++ b/src/BOMA.RTR.Client/src/app/components/table-with-records/table-with-records.component.html
@@ -12,13 +12,9 @@
         <div class="w-full border-r font-bold">
           {{ pairRecord?.userRcpId }}&nbsp;
         </div>
-        <div class="w-full border-r">
-          {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
-          <span class="font-bold">{{ pairRecord?.entryTime }}&nbsp;</span>&nbsp;
-        </div>
+        <div class="w-full border-r">{{ pairRecord?.entryTime }}&nbsp;</div>
         <div class="w-full border-r-2 border-r-amber-900">
-          {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
-          <span class="font-bold">{{ pairRecord?.exitTime }}&nbsp;</span>
+          {{ pairRecord?.exitTime }}&nbsp;
         </div>
       </div>
     }
@@ -37,13 +33,9 @@
         <div class="w-full border-r font-bold">
           {{ pairRecord?.userRcpId }}&nbsp;
         </div>
-        <div class="w-full border-r">
-          {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
-          <span class="font-bold">{{ pairRecord?.entryTime }}&nbsp;</span>&nbsp;
-        </div>
+        <div class="w-full border-r">{{ pairRecord?.entryTime }}&nbsp;</div>
         <div class="w-full border-r-2 border-r-amber-900">
-          {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
-          <span class="font-bold">{{ pairRecord?.exitTime }}&nbsp;</span>
+          {{ pairRecord?.exitTime }}&nbsp;
         </div>
       </div>
     }
@@ -62,14 +54,8 @@
         <div class="w-full border-r font-bold">
           {{ pairRecord?.userRcpId }}&nbsp;
         </div>
-        <div class="w-full border-r">
-          {{ pairRecord?.entryDate | date: 'dd-MM-yyyy' }}
-          <span class="font-bold">{{ pairRecord?.entryTime }}&nbsp;</span>
-        </div>
-        <div class="w-full border-r">
-          {{ pairRecord?.exitDate | date: 'dd-MM-yyyy' }}
-          <span class="font-bold">{{ pairRecord?.exitTime }}&nbsp;</span>
-        </div>
+        <div class="w-full border-r">{{ pairRecord?.entryTime }}&nbsp;</div>
+        <div class="w-full border-r">{{ pairRecord?.exitTime }}&nbsp;</div>
       </div>
     }
   </div>
